# Momentum

./: .gitignore  README.md  pyproject.toml
src/momentum/: __init__.py  dashboard.py
src/momentum/backtest/: __init__.py  engine.py  metrics.py
src/momentum/data/: __init__.py  cache.py  sources.py
src/momentum/signals/: __init__.py  allocation.py  momentum.py
tests/: __init__.py  test_backtest.py  test_signals.py
