[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "momentum"
version = "0.1.0"
description = "Momentum/trend-following investment strategy analyzer"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "pandas-datareader>=0.10.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/momentum"]
